Fixed contact fields not fitting the screen, fixed the bottom of prices and footer

--- a/components/Footer/Footer.module.scss
+++ b/components/Footer/Footer.module.scss
@@ -40,9 +40,13 @@
 }
 
 @include for-phone-only {
+  .fontAwesome {
+    font-size: 0.8rem;
+  }
   .media {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
+    padding: 10px 0;
   }
 }
