--- a/components/Prices/Prices.module.scss
+++ b/components/Prices/Prices.module.scss
@@ -43,7 +43,6 @@
 @include for-phone-only {
   .content {
     grid-template-columns: 100%;
-    grid-template-rows: repeat(4, 25%);
 
     &__section {
       padding: 0 10px 20px 10px;
